@@ -40,9 +40,6 @@ Init_gst_classes (void)
     extern void Init_gst_element (void);
     extern void Init_gst_elementfactory (void);
     extern void Init_gst_event (void);
-    extern void Init_gst_eventmask (void);
-    extern void Init_gst_eventsegmentseek (void);
-    extern void Init_gst_eventsize (void);
     extern void Init_gst_format (void);
     extern void Init_gst_seek(void);
     extern void Init_gst_structure(void);
@@ -90,8 +87,8 @@ Init_gst_classes (void)
     Init_gst_clock_entry ();
     Init_gst_element ();
     Init_gst_elementfactory ();
-    /* Init_gst_event (); */
     Init_gst_seek();
+    Init_gst_seek ();
     Init_gst_format ();
     Init_gst_structure();
     Init_gst_index ();
@@ -119,6 +116,7 @@ Init_gst_classes (void)
     Init_gst_buffer();
     Init_gst_message();
     Init_gst_query();
+    Init_gst_event ();
 
 #if defined(HAVE_GST_OVERLAY)
     Init_gst_x_overlay ();
