@@ -1,3 +1,8 @@
+2008-04-15  Sjoerd Simons <sjoerd@luon.net>
+
+	* src/rbgst-event.c, src/rbgst.c, src/rbgst.h, src/rbgstevent.c: Add an
+	implementation of Gst::Event
+
 2008-04-15  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbgst-x-overlay.c: fix style.
@@ -18,7 +23,7 @@
 	* src/rbgst-pipeline.c: rename from src/rbgstpipeline.c.
 
 2008-04-15  Sjoerd Simons <sjoerd@luon.net>
-
+  implementation of Gst::Event:gstreamer/ChangeLog
 	* src/rbgstxoverlay.c: Add Gst::XOverlay#set_xwindow_id_with_buswatch helper
 	function. To properly set the xwindow id of an XOverlay one has to listen to
 	its messages in sync. This is quite expensive to do in ruby, so do it in a C
